--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { git = "https://github.com/bevyengine/bevy", branch='main' }
+bevy = { git = "https://github.com/bevyengine/bevy", branch = 'main' }
+bevy_fly_camera = { git = "https://github.com/TriForMine/bevy_fly_camera.git" }
+simdnoise = "3.1.6"
+env_logger = "0.8.3"
 
+[profile.dev]
+opt-level = 3
+
+[profile.release]
+lto = true
+opt-level = 3
+incremental = false
+codegen-units = 1
