--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 bevy = { git = "https://github.com/bevyengine/bevy", branch = 'main' }
+building-blocks = "0.5.0"
 bevy_fly_camera = { git = "https://github.com/TriForMine/bevy_fly_camera.git" }
 simdnoise = "3.1.6"
 env_logger = "0.8.3"
