--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,26 @@ description = "An open source minecraft like voxel world game using rust bevy en
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { git = "https://github.com/bevyengine/bevy", branch = 'main' }
-building-blocks = "0.5.0"
 bevy_flycam = { git = "https://github.com/TriForMine/bevy_flycam" }
 simdnoise = "3.1.6"
 env_logger = "0.8.3"
+serde = "1.0"
+
+[dependencies.building-blocks]
+git = "https://github.com/bonsairobo/building-blocks"
+branch = "main"
+
+[dependencies.bevy]
+git = "https://github.com/bevyengine/bevy"
+rev = "3475a64"
+
+[dependencies.bevy-building-blocks]
+git = "https://github.com/bonsairobo/bevy-building-blocks"
+branch = "main"
+
+[dependencies.smooth-voxel-renderer]
+git = "https://github.com/bonsairobo/smooth-voxel-renderer"
+branch = "main"
 
 [profile.dev]
 opt-level = 3
